--- a/frontend/src/assets/styles/tailwind.css
+++ b/frontend/src/assets/styles/tailwind.css
@@ -68,7 +68,7 @@ body {
 
 /*
 Grouping content
-================
+================`
 */
 
 /**
@@ -1079,6 +1079,51 @@ select {
     max-width: 1280px;
   }
 }
+
+.bg-gray-50 {
+  background-color: rgb(249, 250, 251);
+}
+
+.bg-gray-100 {
+  background-color: rgb(243, 244, 246);
+}
+
+.bg-gray-200 {
+  background-color: rgb(229, 231, 235);
+}
+
+.bg-gray-300 {
+  background-color: rgb(209, 213, 219);
+}
+
+.bg-gray-400 {
+  background-color: rgb(156, 163, 175);
+}
+
+.bg-gray-500 {
+  background-color: rgb(107, 114, 128);
+}
+
+.bg-gray-600 {
+  background-color: rgb(75, 85, 99);
+}
+
+.bg-gray-700 {
+  background-color: rgb(55, 65, 81);
+}
+
+.bg-gray-800 {
+  background-color: rgb(31, 41, 55);
+}
+
+.bg-gray-900 {
+  background-color: rgb(17, 24, 39);
+}
+
+.bg-gray-950 {
+  background-color: rgb(3, 7, 18);
+}
+
 
 .bg-black {
   --tw-bg-opacity: 1;
